add conky on click to waybar

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -122,6 +122,7 @@ device:epic mouse V1 {
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrule = float,^(pkexec timeshift-gtk)$
+windowrule = float, ^(conky)$
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
@@ -194,4 +195,4 @@ wsbind=5,DP-1
 # in the future we can also do wsbind=name:secret,DP-1
 
 # screenshot with grimblast
-bind = $mainMod SHIFT, s, exec, grimblast --cursor copy area 
+bind = $mainMod SHIFT, s, exec, grimblast --notify --cursor copy area
