--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -57,7 +57,8 @@
         "critical-threshold": 80,
         // "format-critical": "{temperatureC}°C {icon}",
         "format": "{temperatureC}°C {icon}",
-        "format-icons": ["", "", ""]
+        "format-icons": ["", "", ""],
+        "on-click": "conky"
     },
    
     "pulseaudio": {
