change monitor name

--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -2,4 +2,4 @@ preload = ~/Pictures/everforest-hyprland-rice/wooden-castle-bl-gr.jpg
 preload = ~/Pictures/everforest-hyprland-rice/red-shirt-sword-awesome.jpg
 
 wallpaper = DP-1, ~/Pictures/everforest-hyprland-rice/red-shirt-sword-awesome.jpg
-wallpaper = HDMI-A-2, ~/Pictures/everforest-hyprland-rice/wooden-castle-bl-gr.jpg
+wallpaper = DP-2, ~/Pictures/everforest-hyprland-rice/wooden-castle-bl-gr.jpg
