everforest out, purple rice in

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -56,7 +56,7 @@ general {
     gaps_in = 5
     gaps_out = 20
     border_size = 4 
-    col.active_border = rgb(829b6e) rgb(418cb4) 45deg
+    col.active_border = rgb(6f00ff) rgb(9370db) 45deg #these are hex values
     col.inactive_border = rgba(595959aa)
 
     layout = master
