--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,5 +1,7 @@
-preload = ~/Pictures/everforest-hyprland-rice/wooden-castle-bl-gr.jpg
-preload = ~/Pictures/everforest-hyprland-rice/red-shirt-sword-awesome.jpg
+splash = false
 
-wallpaper = DP-1, ~/Pictures/everforest-hyprland-rice/red-shirt-sword-awesome.jpg
-wallpaper = DP-2, ~/Pictures/everforest-hyprland-rice/wooden-castle-bl-gr.jpg
+preload = ~/Pictures/purple-moon.jpg
+preload = ~/Pictures/skull-purple.png
+
+wallpaper = DP-1, ~/Pictures/purple-moon.jpg
+wallpaper = DP-2, ~/Pictures/skull-purple.png
