--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,13 +1,13 @@
 format = """
-[](#328241)\
+[](#6f00ff)\
 $os\
 $username\
-[](bg:#829b6e fg:#328241)\
+[](bg:#6a5acd fg:#6f00ff)\
 $directory\
-[](fg:#829b6e bg:#418cb4)\
+[](fg:#6a5acd bg:#58427c)\
 $git_branch\
 $git_status\
-[](bg:#418cb4 fg:#418cb4)\
+[](bg:#58427c fg:#58427c)\
 $c\
 $elixir\
 $elm\
@@ -20,19 +20,19 @@ $nodejs\
 $nim\
 $python\
 $rust\
-[ ](bg:#9da9a0 fg:#418cb4)\
+[ ](bg:#967bb6 fg:#58427c)\
 $time\
-[ ](fg:#9da9a0)\
+[ ](fg:#967bb6)\
 """
 
 [username]
 show_always = true
-style_user = "bg:#328241"
-style_root = "bg:#328241"
+style_user = "bg:#6f00ff"
+style_root = "bg:#6f00ff"
 format = '[$user ]($style)'
  
 [directory]
-style = "bg:#829b6e"
+style = "bg:#6a5acd"
 format = "[ $path ]($style)"
 truncation_length = 3
 truncation_symbol = "…/"
@@ -43,21 +43,21 @@ error_symbol = "[✗](bold red)"
 
 [python]
 #symbol = ""
-style = "bg:#418cb4"
+style = "bg:#58427c"
 format = '[ $symbol $version]($style)'
 
 [git_branch]
 symbol = ""
-style = "bg:#418cb4"
+style = "bg:#58427c"
 format = '[ $symbol $branch ]($style)'
 
 [git_status]
-style = "bg:#418cb4"
+style = "bg:#58427c"
 format = '[$all_status$ahead_behind ]($style)'
 
 [time]
 disabled = false
 time_format = "%R" # Hour:Minute Format
-style = "bg:#9da9a0"
-format = '[  $time ]($style)'
+style = "bg:#967bb6"
+format = '[ $time ]($style)'
 
