--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,7 +1,7 @@
 splash = false
 
-preload = ~/Pictures/purple-moon.jpg
-preload = ~/Pictures/skull-purple.png
+preload = ~/Pictures/gruvbox-rice/gruvbox-anime-sit.jpg
+preload = ~/Pictures/gruvbox-rice/gruvbox-street.jpg
 
-wallpaper = DP-1, ~/Pictures/purple-moon.jpg
-wallpaper = DP-2, ~/Pictures/skull-purple.png
+wallpaper = DP-1, ~/Pictures/gruvbox-rice/gruvbox-anime-sit.jpg
+wallpaper = DP-2, ~/Pictures/gruvbox-rice/gruvbox-street.jpg
