--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -25,14 +25,15 @@ monitor=DP-1, 1920x1080@144, 0x0, 1
  exec-once = ~/.config/hypr/autostart.sh
  exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
  exec-once = /usr/lib/polkit-kde-authentication-agent-1
- exec-once = dunst
+ exec-once = swaync 
  exec-once = waybar
+ exec-once = hyprctl setcursor Captaine Cursors - White 16
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
 
 # Some default env vars.
-env = XCURSOR_SIZE,24
+#env = XCURSOR_SIZE,24
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
@@ -83,17 +84,15 @@ decoration {
 
 animations {
     enabled = yes
-    bezier = overshot, 0.05, 0.9, 0.1, 1.05
-    bezier = smoothOut, 0.36, 0, 0.66, -0.56
-    bezier = smoothIn, 0.25, 1, 0.5, 1
+    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
 
-    animation = windows, 1, 5, overshot, slide
-    animation = windowsOut, 1, 4, smoothOut, slide
-    animation = windowsMove, 1, 4, default
+    animation = windows, 1, 7, myBezier
+    animation = windowsOut, 1, 7, default, popin 80%
     animation = border, 1, 10, default
-    animation = fade, 1, 10, smoothIn
-    animation = fadeDim, 1, 10, smoothIn
-    animation = workspaces, 1, 6, default 
+    animation = borderangle, 1, 8, default
+    animation = fade, 1, 7, default
+    animation = workspaces, 1, 6, default
+    animation = specialWorkspace, 1, 5.5, myBezier, slidevert
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 }
 
@@ -132,11 +131,12 @@ windowrule = float, ^(conky)$
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
+bind = $mainMod, W, exec, ~/.config/waybar/scripts/launch.sh
 bind = $mainMod, Return, exec, kitty
 bind = $mainMod, Q, killactive, 
 bind = $mainMod, M, exit, 
 bind = $mainMod, F, exec, pcmanfm 
-bind = $mainMod, W, togglefloating, 
+bind = $mainMod, Space, togglefloating, 
 # bind = $mainMod, R, exec, wofi --show drun
 # bind = $mainMod, R, exec, rofi -show combi --modes combi -combi-modes drun -icon-theme Papirus -show-icons
 bind = $mainMod, R, exec, ~/.config/rofi/launchers/type-6/launcher.sh
