--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,47 +1,76 @@
+# background for lock screen
 background {
-  monitor = 
-  path = ~/Pictures/gruvbox-rice/arch-gruvbox.png
+  monitor = DP-1
+  path = ~/Pictures/boruto.png
+  blur_size = 1 
+  blur_passes = 2
 }
 
+# make lock screen only display on DP-1
+background {
+  monitor = DP-2
+  color: black
+}
+
+# hide the cursor
+general {
+  hide_cursor = true
+}
+
+
+# where you type in the password
 input-field {
-    monitor =
+    monitor = DP-1
     size = 200, 50
-    outline_thickness = 3
-    dots_size = 0.33 # Scale of input-field height, 0.2 - 0.8
-    dots_spacing = 0.15 # Scale of dots' absolute size, 0.0 - 1.0
-    dots_center = false
-    dots_rounding = -1 # -1 default circle, -2 follow input-field rounding
-    outer_color = rgb(151515)
-    inner_color = rgb(200, 200, 200)
-    font_color = rgb(10, 10, 10)
-    fade_on_empty = true
-    fade_timeout = 1000 # Milliseconds before fade_on_empty is triggered.
-    placeholder_text = <i>Input Password...</i> # Text rendered in the input box when it's empty.
-    hide_input = false
-    rounding = -1 # -1 means complete rounding (circle/oval)
-    check_color = rgb(204, 136, 34)
-    fail_color = rgb(204, 34, 34) # if authentication failed, changes outer_color and fail message color
-    fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i> # can be set to empty
-    fail_transition = 300 # transition time in ms between normal outer_color and fail_color
-    capslock_color = -1
-    numlock_color = -1
-    bothlock_color = -1 # when both locks are active. -1 means don't change outer color (same for above)
-    invert_numlock = false # change color if numlock is off
-    swap_font_color = false # see below
+    outline_thickness = 3 # border thickness
+    dots_size = 0.1 # use dots to mask the password being typed
+    dots_spacing = 0.3
+    outer_color = rgba(124, 111, 100, 1) # border
+    inner_color = rgba(69, 133, 136, 1) # input background
+    font_color = rgb(200, 200, 200) # text color
+    fade_on_empty = false # whether to show the input field at all times
 
-    position = 0, -20
+    position = 0, -40 
     halign = center
     valign = center
 }
 
+# text to display on lock screen
 label {
-    monitor =
-    text = Hi there, $USER
-    color = rgba(69, 133, 136, 1.0)
-    font_size = 25
-    font_family = Space Mono Nerd Font
+    monitor = DP-1
+    text = Hi 
+    color = rgba(200, 200, 200, 1.0)
+    font_size = 45
+    font_family = Hack Nerd Font
 
-    position = 0, 140 
+    position = -100, 340 
     halign = center
     valign = center
+}
+
+# text to display on lock screen
+label {
+    monitor = DP-1
+    text =  $USER :)
+    color = rgba(69, 133, 136, 1.0)
+    font_size = 45
+    font_family = Hack Nerd Font
+
+    position = 100, 340 
+    halign = center
+    valign = center
+}
+
+
+label { # lock icon
+    monitor = DP-1
+    text = lock
+    shadow_passes = 1
+    shadow_boost = 0.5
+    color = rgba(69, 133, 136, 1.0)
+    font_size = 70
+    font_family = Material Symbols Rounded
+    position = 0, 65
+    halign = center
+    valign = bottom
 }
