--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -10,9 +10,9 @@
     "output": ["DP-1", "DP-2"],
 
     // Choose the order of the modules
-    "modules-left": ["custom/powermenu", "tray", "custom/updates", "temperature"],
+    "modules-left": ["custom/notification", "network", "temperature", "memory"],
     "modules-center": ["hyprland/workspaces"],
-    "modules-right": ["custom/playerctl", "pulseaudio", "pulseaudio#mic", "clock"],
+    "modules-right": ["custom/updates", "pulseaudio", "clock"],
 
     // Modules configuration
      "hyprland/workspaces": {
@@ -23,15 +23,26 @@
         "format": "{icon}",
         //"format": "{name}",
          "format-icons": {
-             "1": "",
-             "2": "",
-             "3": "",
-             "4": "",
-             "5": "",
+             "active": "󰮯",
              "urgent": "",
              "focused": "",
              "default": ""
          }
+    },
+
+  "hyprland/window": {
+        "format": "  {}",
+        "separate-outputs": true
+    },
+
+  "network": {
+        // "interface": "wlp2*", // (Optional) To force the use of this interface
+        "format-wifi": "{essid} ({signalStrength}%)  ",
+        "format-ethernet": "{ifname} 󰈀",
+        "tooltip-format": "{ipaddr}/{cidr} via {gwaddr} ",
+        "format-linked": "{ifname} (No IP) ",
+        "format-disconnected": "Disconnected ⚠",
+        "on-click": "iwgtk"
     },
 
     
@@ -42,51 +53,45 @@
     },
     "clock": {
         // "timezone": "America/New_York",
+        "format": "{:%I:%M %p - %a, %b %d %Y}",
         "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
-        "format-alt": "{:%Y-%m-%d}"
     },
     "cpu": {
-        "format": "{usage}% ",
-        "tooltip": false
+        "format": "{usage}%  ",
+        "tooltip-format": "CPU Usage"
     },
-    //"memory": {
-    //    "format": "{}% "
-    //},
+    "memory": {
+        "format": " {used}G",
+        "tooltip-format": "RAM Usage"
+    },
     "temperature": {
-        // "thermal-zone": 2,
-        // "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
         "critical-threshold": 80,
-        // "format-critical": "{temperatureC}°C {icon}",
         "format": "{temperatureC}°C {icon}",
+        "tooltip-format": "CPU Temp",
         "format-icons": ["", "", ""],
         "on-click": "conky"
     },
    
     "pulseaudio": {
-        "scroll-step": 2, // %, can be a float
-        "format": "{icon} {volume} ",
+        // "scroll-step": 1, // %, can be a float
+        "format": "{volume}% {icon}  {format_source}",
         "format-bluetooth": "{volume}% {icon} {format_source}",
         "format-bluetooth-muted": " {icon} {format_source}",
-        "format-muted": " {format_source}",
+        "format-muted": " {format_source}",
+        "format-source": "{volume}% ",
+        "format-source-muted": "",
         "format-icons": {
-            "stock image type shit": ["", "", ""],
-            "default": ""
+            "headphone": "",
+            "hands-free": "",
+            "headset": "",
+            "phone": "",
+            "portable": "",
+            "car": "",
+            "default": ["", "", ""]
         },
         "on-click": "pavucontrol"
     },
-    "pulseaudio#mic" : {
-        "format": "{format_source}",
-        "format-source": " {volume}",
-        "format-source-muted": " {volume}",
-        "scroll-step": 2,
-        "on-click": "pavucontrol"
-    },
 
-    "custom/updates": {
-    "exec": "paru -Qu | wc -l", 
-    "interval": 3600,
-    "format": " {} " 
-    },
 
   "custom/playerctl": {
     "format": "{icon}  <span>{}</span>",
@@ -103,11 +108,53 @@
 
 },
 
-  "custom/powermenu": {
-      "format": "   ",
-      //"on-click": "rofi -show power-menu -modi power-menu:powermenu"
-      "on-click": "~/.config/rofi/powermenu/type-6/powermenu.sh"
+  "custom/updates": {
+      "tooltip": "true",
+      "format": "󰇚 {} ",
+      "tooltip-format": "Update Counter",
+      "exec": "checkupdates | wc -l",
+      "interval": 3600,
+      "on-click": " sleep 0.1 && ~/.config/waybar/scripts/update.sh"
+  },
+
+  "custom/launcher": {
+    "tooltip-format": "Notification Center",
+    "format": "{icon} ",
+    "format-icons": {
+      "notification": "<span foreground='#458588'><sup></sup></span>",
+      "none": "",
+      "dnd-notification": "<span foreground='#458588'><sup></sup></span>",
+      "dnd-none": "",
+      "inhibited-notification": "<span foreground='#458588'><sup></sup></span>",
+      "inhibited-none": "",
+      "dnd-inhibited-notification": "<span foreground='#458588'><sup></sup></span>",
+      "dnd-inhibited-none": ""
+    },
+    "return-type": "json",
+    "exec-if": "which swaync-client",
+    "exec": "swaync-client -swb",
+    "on-click": "sleep 0.1 && swaync-client -t -sw",
+    "escape": true
+  },
+
+  "custom/notification": {
+    "tooltip-format": "Notification Center",
+    "format": "{icon}  roman",
+    "format-icons": {
+      "notification": "<span foreground='#458588'><sup></sup></span>",
+      "none": "",
+      "dnd-notification": " <span foreground='#458588'><sup></sup></span>",
+      "dnd-none": "",
+      "inhibited-notification": "<span foreground='#458588'><sup></sup></span>",
+      "inhibited-none": "",
+      "dnd-inhibited-notification": "<span foreground='#458588'><sup></sup></span>",
+      "dnd-inhibited-none": ""
+    },
+    "return-type": "json",
+    "exec-if": "which swaync-client",
+    "exec": "swaync-client -swb",
+    "on-click": "sleep 0.1 && swaync-client -t -sw",
+    "escape": true
   }
 
 }
-
