--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -28,6 +28,7 @@ monitor=DP-1, 1920x1080@144, 0x0, 1
  exec-once = swaync 
  exec-once = waybar
  exec-once = hyprctl setcursor Captaine Cursors - White 16
+ exec-once = hyprshade on vibrance # turn on digital vibrance
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -69,17 +70,15 @@ decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     rounding = 10
-    # blur = yes
-    # blur_size = 3
-    # blur_passes = 1
-    # blur_new_optimizations = on
 
-    drop_shadow = yes
-    shadow_range = 10
-    shadow_render_power = 1
-    #col.shadow = rgba(1a1a1aee)
-    col.shadow = rgba(458588ee)
-    col.shadow_inactive= rgba(1a1a1aee)
+    shadow {
+        enabled = true
+        range = 10
+        render_power = 1
+        color = rgba(458588ee)
+        color_inactive = rgba(1a1a1aee)
+
+    }
 }
 
 animations {
@@ -104,7 +103,7 @@ dwindle {
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = false 
+    new_status = slave
 }
 
 gestures {
@@ -212,3 +211,6 @@ workspace=10, monitor:DP-2
 
 # screenshot with grimblast
 bind = $mainMod SHIFT, s, exec, grimblast --notify --cursor copy area
+
+# make window fullscreen
+bind = $mainMod SHIFT, f, fullscreen
