gruvbox light rice

--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,7 +1,7 @@
 # background for lock screen
 background {
   monitor = DP-1
-  path = ~/Pictures/boruto.png
+  path = ~/Pictures/Wallpapers/boruto.png
   blur_size = 1 
   blur_passes = 2
 }
