--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -22,7 +22,7 @@ monitor=DP-1, 1920x1080@144, 0x0, 1
 # Execute your favorite apps at launch
  exec-once = hypridle
  exec-once = hyprpaper
- exec-once = ~/.config/hypr/autostart.sh
+ #exec-once = ~/.config/hypr/autostart.sh
  exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
  exec-once = /usr/lib/polkit-kde-authentication-agent-1
  exec-once = swaync 
