add buttons for youtube music, librewolf, and webcord

--- a/.config/swaync/config.json
+++ b/.config/swaync/config.json
@@ -76,14 +76,6 @@
           "command": "systemctl suspend"
         },
         {
-          "label":"",
-          "command": "pactl set-sink-mute @DEFAULT_SINK@ toggle"
-        },
-        {
-          "label": "󰍬",
-          "command" : "pactl set-source-mute @DEFAULT_SOURCE@ toggle"
-        },
-        {
           "label": "",
           "command": "kooha"
         },
@@ -92,8 +84,16 @@
           "command": "iwgtk"
         },
         {
-          "label": "",
-          "command": "grimblast --notify --cursor copy area"
+          "label": "󰖟",
+          "command": "librewolf"
+        },
+        {
+          "label": "󰝚",
+          "command": "youtube-music"
+        },
+        {
+          "label": "󰙯",
+          "command": "webcord"
         }
       ]
     }
