add theme switching

--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -6,12 +6,12 @@ general {
 
 
 listener {
-    timeout = 1800                                 # 30min
+    timeout = 600                                 # 600 sec = 10 min
     on-timeout = hyprlock            # lock screen when timeout has passed
 }
 
 
 listener {
-    timeout = 1800                                # 1hr
+    timeout = 900                                # 900 sec = 15 min
     on-timeout = systemctl suspend                # suspend pc
 }
