--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,7 +1,7 @@
 # background for lock screen
 background {
   monitor = DP-1
-  path = ~/Pictures/Wallpapers/boruto.png
+  path = ~/Pictures/Wallpapers/arch_btw.png
   blur_size = 1 
   blur_passes = 2
 }
@@ -25,8 +25,8 @@ input-field {
     outline_thickness = 3 # border thickness
     dots_size = 0.1 # use dots to mask the password being typed
     dots_spacing = 0.3
-    outer_color = rgba(124, 111, 100, 1) # border
-    inner_color = rgba(69, 133, 136, 1) # input background
+    outer_color = rgba(20, 145, 208, 1) # border
+    inner_color = rgba(0, 36, 70, 1) # input background
     font_color = rgb(200, 200, 200) # text color
     fade_on_empty = false # whether to show the input field at all times
 
@@ -35,7 +35,7 @@ input-field {
     valign = center
 }
 
-# text to display on lock screen
+# text to display on lock screen (says hi)
 label {
     monitor = DP-1
     text = Hi 
@@ -48,11 +48,11 @@ label {
     valign = center
 }
 
-# text to display on lock screen
+# text to display on lock screen (shows user's name)
 label {
     monitor = DP-1
     text =  $USER :)
-    color = rgba(69, 133, 136, 1.0)
+    color = rgba(20, 145, 208, 1)
     font_size = 45
     font_family = Hack Nerd Font
 
@@ -67,7 +67,7 @@ label { # lock icon
     text = lock
     shadow_passes = 1
     shadow_boost = 0.5
-    color = rgba(69, 133, 136, 1.0)
+    color = rgba(20, 145, 208, 1)
     font_size = 70
     font_family = Material Symbols Rounded
     position = 0, 65
