fix update module

--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -109,12 +109,17 @@
 },
 
   "custom/updates": {
-      "tooltip": "true",
-      "format": "󰇚 {} ",
-      "tooltip-format": "Update Counter",
-      "exec": "checkupdates | wc -l",
-      "interval": 3600,
-  },
+    "format": "{} {icon}",
+    "return-type": "json",
+    "format-icons": {
+        "has-updates": "󰇚 ",
+        "updated": "󰂪"
+    },
+    "exec-if": "which waybar-module-pacman-updates",
+    "exec": "waybar-module-pacman-updates --interval-seconds 5 --network-interval-seconds 300"
+},
+
+ 
 
   "custom/launcher": {
     "tooltip-format": "Notification Center",
