nwg-dock-hyprland config

--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -113,7 +113,7 @@
     "return-type": "json",
     "format-icons": {
         "has-updates": "󰇚 ",
-        "updated": "󰂪"
+        "updated": " "
     },
     "exec-if": "which waybar-module-pacman-updates",
     "exec": "waybar-module-pacman-updates --interval-seconds 5 --network-interval-seconds 300"
