--- a/.config/hypr/config/workspaces.conf
+++ b/.config/hypr/config/workspaces.conf
@@ -2,11 +2,11 @@
 workspace=1, monitor:DP-1
 workspace=2, monitor:DP-1
 workspace=3, monitor:DP-1
-workspace=4, monitor:DP-1
-workspace=5, monitor:DP-1
+workspace=4, monitor:DP-2
+workspace=5, monitor:DP-2
 workspace=6, monitor:DP-2
-workspace=7, monitor:DP-2
-workspace=8, monitor:DP-2
-workspace=9, monitor:DP-2
-workspace=10, monitor:DP-2
+#workspace=7, monitor:DP-2
+#workspace=8, monitor:DP-2
+#workspace=9, monitor:DP-2
+#workspace=10, monitor:DP-2
 # in the future we can also do wsbind=name:secret,DP-1
