add .zshrc and hyprland env vars

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -8,6 +8,7 @@ source = ./config/workspaces.conf
 source = ./config/windowrules.conf
 source = ./config/peripherals.conf
 source = ./config/animations.conf
+source = ./config/env_variables.conf
 source = ./theme.conf # general and decoration functions used with the theme switcher
 
 
