--- a/.config/hypr/config/windowrules.conf
+++ b/.config/hypr/config/windowrules.conf
@@ -6,3 +6,5 @@
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrule = float,^(pkexec timeshift-gtk)$
 windowrule = float, ^(conky)$
+windowrulev2 = stayfocused, title:^()$,class:^(steam)$
+windowrulev2 = minsize 1 1, title:^()$,class:^(steam)$
