--- a/.config/hypr/themes/gruvbox-light.conf
+++ b/.config/hypr/themes/gruvbox-light.conf
@@ -14,6 +14,8 @@ general {
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
+    screen_shader = $HOME/.config/hypr/shaders/vibrance.gsl
+
     rounding = 10
 
     shadow {
