--- a/.config/hypr/themes/peaceful_pond.conf
+++ b/.config/hypr/themes/peaceful_pond.conf
@@ -5,7 +5,7 @@ general {
     gaps_out = 20
     border_size = 4 
     #col.active_border = rgb(6f00ff) rgb(9370db) 45deg #these are hex values
-    col.active_border = rgb(a297d7) # hex in parentheses
+    col.active_border = rgb(a297d7) rgb(a48db0) rgb(7486b6) rgb(857dc8) rgb(92709f) rgb(5462ae) # hex in parentheses
     col.inactive_border = rgba(595959aa)
 
     layout = master
@@ -13,11 +13,11 @@ general {
 
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-
+    screen_shader = $HOME/.config/hypr/shaders/vibrance.gsl
     rounding = 10
 
     shadow {
-        enabled = true
+        enabled = false
         range = 10
         render_power = 1
         color = rgba(162, 151, 215, 1)
