--- a/.config/hypr/config/env_variables.conf
+++ b/.config/hypr/config/env_variables.conf
@@ -1,3 +1,3 @@
 # set cursor. If you change this, make sure it is the same in nwg-look or else electron apps will just start crashing for some reason
-env = HYPRCURSOR_THEME,Capitaine Cursors
+env = HYPRCURSOR_THEME, Adwaita
 env = HYPRCURSOR_SIZE,24
