set cursor theme

--- a/.config/hypr/config/env_variables.conf
+++ b/.config/hypr/config/env_variables.conf
@@ -1,3 +1,5 @@
-# set cursor. If you change this, make sure it is the same in nwg-look or else electron apps will just start crashing for some reason
-env = HYPRCURSOR_THEME, Adwaita
+# set cursor. XCURSOR_THEME and XCURSOR_SIZE are also set to the exact same thing, and I also ran gsettings set org.gnome.desktop.interface cursor-theme 'Capitaine Cursors'. If you dont do all of these things, apps will start crashing on startup because of something to do with not being able to grab a cursor.
+env = HYPRCURSOR_THEME,Capitaine Cursors 
 env = HYPRCURSOR_SIZE,24
+env = XCURSOR_THEME,Capitaine Cursors
+env = XCURSOR_SIZE,24
