--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -2,8 +2,8 @@
 background {
   monitor = DP-1
   path = ~/Pictures/Wallpapers/arch_btw.png
-  blur_size = 3
-  blur_passes = 1
+  blur_size = 1
+  blur_passes = 2
 }
 
 # make lock screen only display on DP-1
@@ -61,8 +61,21 @@ label {
     valign = center
 }
 
+# display time
+label {
+    monitor = DP-1
+    text = $TIME12
+    color = rgba(20,145,208,0.5)
+    font_size = 45
+    font_family = Hack Nerd Font
 
-label { # lock icon
+    position = 0, 220
+    halign = center
+    valign = center
+}
+
+# lock icon
+label { 
     monitor = DP-1
     text = lock
     shadow_passes = 1
