--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -1,3 +1,5 @@
+[
+// BEGIN DP-1 CONFIG
 {
     "layer": "top", // Waybar at top layer
     "position": "top", // Waybar position (top|bottom|left|right)
@@ -7,7 +9,7 @@
     "margin-right": 6,
     "margin-bottom": 6,
     
-    "output": ["DP-1", "DP-2"],
+    "output": ["DP-1"],
 
     // Choose the order of the modules
     "modules-left": ["custom/powermenu", "network", "custom/dotfiles"],
@@ -30,11 +32,7 @@
          }
     },
 
-  "hyprland/window": {
-        "format": "  {}",
-        "separate-outputs": true
-    },
-
+  // network info
   "network": {
         // "interface": "wlp2*", // (Optional) To force the use of this interface
         "format-wifi": "{essid} ({signalStrength}%)  ",
@@ -45,25 +43,20 @@
         "on-click": "iwgtk"
     },
 
-    
-    "tray": {
-        // "icon-size": 21,
-        "spacing": 10,
-        //"show-passive-items": true
-    },
+    // date and time
     "clock": {
         // "timezone": "America/New_York",
         "format": "{:%I:%M %p - %a, %b %d}",
         "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
     },
-    "cpu": {
-        "format": "{usage}%  ",
-        "tooltip-format": "CPU Usage"
-    },
+    
+    // ram usage
     "memory": {
         "format": " {used}G",
         "tooltip-format": "RAM Usage",
     },
+
+    //cpu temp
     "temperature": {
         "critical-threshold": 80,
         "format": "{temperatureC}°C {icon}",
@@ -72,6 +65,7 @@
         "on-click": "conky"
     },
    
+    // show or change volume output/input level
     "pulseaudio": {
         // "scroll-step": 1, // %, can be a float
         "format": "{volume}% {icon}  {format_source}",
@@ -92,7 +86,7 @@
         "on-click": "pavucontrol"
     },
 
-
+  // shows what song is playing in youtube music, not using rn but again, lowkey complicated don't wanna lose it
   "custom/playerctl": {
     "format": "{icon}  <span>{}</span>",
     "return-type": "json",
@@ -109,7 +103,7 @@
 },
 
 // uses the waybar-module-pacman-git aur package
-"custom/updates": {
+"custom/update": {
     "format": "{} {icon}",
     "return-type": "json",
     "format-icons": {
@@ -121,34 +115,15 @@
 },
 
 // my custom script - can never figure out why it says 0 updates on monitor 2
-"custom/update": {
-    "format": "󰇚 {} ",
+"custom/updates": {
+    "format": "{} ",
     "return-type": "json",
     "interval": "60",
     "exec": "~/.config/waybar/scripts/update.sh"
 },
  
 
-  "custom/launcher": {
-    "tooltip-format": "Notification Center",
-    "format": "{icon} ",
-    "format-icons": {
-      "notification": "<span foreground='#458588'><sup></sup></span>",
-      "none": "",
-      "dnd-notification": "<span foreground='#458588'><sup></sup></span>",
-      "dnd-none": "",
-      "inhibited-notification": "<span foreground='#458588'><sup></sup></span>",
-      "inhibited-none": "",
-      "dnd-inhibited-notification": "<span foreground='#458588'><sup></sup></span>",
-      "dnd-inhibited-none": ""
-    },
-    "return-type": "json",
-    "exec-if": "which swaync-client",
-    "exec": "swaync-client -swb",
-    "on-click": "sleep 0.1 && swaync-client -t -sw",
-    "escape": true
-  },
-
+  // for swaync, saving incase I use it again since this is lowkey complicated syntax
   "custom/notification": {
     "tooltip-format": "Notification Center",
     "format": "{icon}  roman",
@@ -169,24 +144,10 @@
     "escape": true
   },
 
+  // logout, shutdown, etc.
   "custom/powermenu": {
     "format": "  roman",
     "on-click": "rofi -show power-menu -modi power-menu:~/.local/bin/powermenu"
-  },
-
-  "custom/browser": {
-    "format": " ",
-    "on-click": "librewolf"
-  },
-
-   "custom/music": {
-    "format": " ",
-    "on-click": "youtube-music"
-  },
-
-  "custom/filebrowser": {
-    "format": "󰉋 ",
-    "on-click": "pcmanfm"
   },
 
 // check status of dotfile's (if they need pushed or not)
@@ -196,4 +157,59 @@
     "exec": "~/.config/waybar/scripts/dotfile_status.sh 2> /dev/null",
     "return-type": "json"
   }
+},
+// END DP-1 WAYBAR CONFIG
+
+
+
+
+
+// BEGIN DP-2 WAYBAR CONFIG
+{
+    "layer": "top", // Waybar at top layer
+    "position": "top", // Waybar position (top|bottom|left|right)
+    "height": 50, // Waybar height (to be removed for auto height)
+    "margin-top": 6,
+    "margin-left": 6,
+    "margin-right": 6,
+    "margin-bottom": 6,
+    
+    "output": ["DP-2"],
+
+    // Choose the order of the modules
+    "modules-left": ["custom/powermenu"],
+    "modules-center": ["hyprland/workspaces"],
+    "modules-right": ["clock"],
+
+    // shutdown, logout, etc. 
+    "custom/powermenu": {
+    "format": "  roman",
+    "on-click": "rofi -show power-menu -modi power-menu:~/.local/bin/powermenu"
+    },
+    
+
+    // workspaces
+     "hyprland/workspaces": {
+         "on-click": "activate",
+         "disable-scroll": true,
+         "all-outputs": false,
+         "sort-by-number": true,
+        "format": "{icon}",
+        //"format": "{name}",
+         "format-icons": {
+             "active": "󰮯",
+             "urgent": "",
+             "focused": "",
+             "default": ""
+         }
+    },
+
+     // date and time
+     "clock": {
+        // "timezone": "America/New_York",
+        "format": "{:%I:%M %p - %a, %b %d}",
+        "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
+    },
 }
+// END DP-2 WAYBAR CONFIG
+]
