--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -6,12 +6,12 @@ general {
 
 
 listener {
-    timeout = 600                                 # 600 sec = 10 min
-    on-timeout = hyprlock            # lock screen when timeout has passed
+    timeout = 300                                 # 300 sec = 5 min
+    on-timeout = loginctl lock-session           # lock screen when timeout has passed
 }
 
 
 listener {
-    timeout = 900                                # 900 sec = 15 min
+    timeout = 300                                # 300 sec = 5 min
     on-timeout = systemctl suspend                # suspend pc
 }
