took out nwg dock hyprland

--- a/.config/hypr/config/autostarts.conf
+++ b/.config/hypr/config/autostarts.conf
@@ -9,4 +9,4 @@
  exec-once = hyprshade on vibrance # turn on digital vibrance
  exec-once = swww-daemon # start wallpaper daemon
  exec-once = ~/.config/hypr/scripts/set_wallpaper.sh # set wallpapers
- exec-once = nwg-dock-hyprland -mb 5 -i 26 -d -hd 0 # open dock
+# exec-once = nwg-dock-hyprland -mb 5 -i 26 -d -hd 0 # open dock
