--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -6,12 +6,12 @@ general {
 
 
 listener {
-    timeout = 300                                 # 300 sec = 5 min
+    timeout = 1800                                 # 30 min
     on-timeout = loginctl lock-session           # lock screen when timeout has passed
 }
 
 
 listener {
-    timeout = 300                                # 300 sec = 5 min
+    timeout = 600                                # 10 min
     on-timeout = systemctl suspend                # suspend pc
 }
