--- a/.config/hypr/config/env_variables.conf
+++ b/.config/hypr/config/env_variables.conf
@@ -3,3 +3,5 @@ env = HYPRCURSOR_THEME,Capitaine Cursors
 env = HYPRCURSOR_SIZE,24
 env = XCURSOR_THEME,Capitaine Cursors
 env = XCURSOR_SIZE,24
+
+env = HYPRSHOT_DIR,~/Pictures
