kitty split line colors

--- a/.config/kitty/current-theme.conf
+++ b/.config/kitty/current-theme.conf
@@ -2,6 +2,7 @@ foreground         #0d0d0d
 background         #c2c2c2
 cursor             #90908F
 
+active_border_color #0d0d0d
 
 color0       #E0E0DF
 color8       #A0A09F
