--- a/.config/kitty/themes/gruvbox-light.conf
+++ b/.config/kitty/themes/gruvbox-light.conf
@@ -9,6 +9,8 @@ selection_background    #d65d0e
 background              #f2e5bc
 foreground              #3c3836
 
+active_border_color     #8f3f71
+
 color0                  #ebdbb2
 color1                  #cc241d
 color2                  #98971a
