--- a/.config/kitty/themes/purple_abyss.conf
+++ b/.config/kitty/themes/purple_abyss.conf
@@ -1,6 +1,8 @@
 foreground         #c1c1c3
 background         #0a0910
 
+active_border_color #670e92
+
 color0       #0a0910
 color8       #57576a
 color1       #534D5C
