--- a/.config/kitty/themes/Mugetsu.conf
+++ b/.config/kitty/themes/Mugetsu.conf
@@ -2,6 +2,7 @@ foreground         #0d0d0d
 background         #c2c2c2
 cursor             #90908F
 
+active_border_color #0d0d0d
 
 color0       #E0E0DF
 color8       #A0A09F
