--- a/.config/hypr/themes/gruvbox-light.conf
+++ b/.config/hypr/themes/gruvbox-light.conf
@@ -26,6 +26,20 @@ decoration {
         color_inactive = rgba(1a1a1aee)
 
     }
+
+    blur {
+        enabled = true
+        xray = true
+        special = false
+        new_optimizations = true
+        size = 11
+        passes = 2
+        brightness = 1
+        noise = 0.01
+        contrast = 1
+        popups = true
+        popups_ignorealpha = 0.6
+    }
 }
 
 windowrule = opacity 0.85, kitty # set kitty opacity
