--- a/.config/hypr/themes/purple_abyss.conf
+++ b/.config/hypr/themes/purple_abyss.conf
@@ -14,6 +14,20 @@ decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
     screen_shader = $HOME/.config/hypr/shaders/vibrance.gsl
     rounding = 10
+
+    blur {
+        enabled = true
+        xray = true
+        special = false
+        new_optimizations = true
+        size = 11
+        passes = 3
+        brightness = 1
+        noise = 0.01
+        contrast = 1
+        popups = true
+        popups_ignorealpha = 0.6
+    }
 }
 
 windowrule = opacity 0.8, kitty # set kitty opacity
