pastel sky theme

--- a/.config/hypr/config/windowrules.conf
+++ b/.config/hypr/config/windowrules.conf
@@ -6,5 +6,8 @@
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrule = float,^(pkexec timeshift-gtk)$
 windowrule = float, ^(conky)$
-windowrulev2 = stayfocused, title:^()$,class:^(steam)$
-windowrulev2 = minsize 1 1, title:^()$,class:^(steam)$
+
+# make steam stop closing when you fullscreen a game. tbh not sure which one of these three rules does the trick, so I just keep them all
+windowrulev2 = stayfocused, title:^(Steam)$,class:^(Steam)$
+windowrulev2 = minsize 1 1, title:^(Steam)$,class:^(Steam)$
+windowrulev2 = move onscreen cursor, title:^(Steam)$, class:^(Steam)$
