--- a/.config/hypr/themes/pastel_sky.conf
+++ b/.config/hypr/themes/pastel_sky.conf
@@ -3,8 +3,8 @@ general {
 
     gaps_in = 5
     gaps_out = 15
-    border_size = 4
-    col.active_border = rgb(DFA7BF) # hex in parentheses
+    border_size = 6
+    col.active_border = rgb(608EC4) # hex in parentheses
     col.inactive_border = rgba(c3c3c6aa)
 
     layout = master
@@ -30,4 +30,4 @@ decoration {
     }
 }
 
-windowrule = opacity 0.7, kitty # set kitty opacity
+windowrule = opacity 0.8, kitty # set kitty opacity
