--- a/.config/kitty/current-theme.conf
+++ b/.config/kitty/current-theme.conf
@@ -1,26 +1,26 @@
-foreground         #DFA7BF
-background         #739bcb
+foreground         #608EC4
+background         #DFA7BF
 cursor             #c3c3c6
 
 
-active_border_color   #DFA7BF
+active_border_color   #608EC4
 
-color0       #ffeef5
-color8       #c3c3c6
-color1       #DFA7BF
-color9       #DFA7BF
-color2       #DFA7BF
-color10      #DFA7BF
-color3       #DFA7BF
-color11      #DFA7BF
-color4       #DFA7BF
-color12      #DFA7BF
-color5       #DFA7BF
-color13      #DFA7BF
-color6       #DFA7BF
-color14      #DFA7BF
-color7       #DFA7BF
-color15      #DFA7BF
+color0       #10121b
+color8       #5c5f70
+color1       #4F7AC1
+color9       #4F7AC1
+color2       #3F81BD
+color10      #3F81BD
+color3       #4D84BD
+color11      #4D84BD
+color4       #6E85BA
+color12      #6E85BA
+color5       #608EC4
+color13      #608EC4
+color6       #608EC4
+color14      #608EC4
+color7       #608EC4
+color15      #608EC4
 
 
 #608EC4
