--- a/.config/kitty/current-theme.conf
+++ b/.config/kitty/current-theme.conf
@@ -1,26 +1,22 @@
-foreground         #608EC4
-background         #DFA7BF
-cursor             #c3c3c6
+foreground         #0d0d0d
+background         #c2c2c2
+cursor             #90908F
 
+active_border_color #0d0d0d
 
-active_border_color   #608EC4
-
-color0       #10121b
-color8       #5c5f70
-color1       #4F7AC1
-color9       #4F7AC1
-color2       #3F81BD
-color10      #3F81BD
-color3       #4D84BD
-color11      #4D84BD
-color4       #6E85BA
-color12      #6E85BA
-color5       #608EC4
-color13      #608EC4
-color6       #608EC4
-color14      #608EC4
-color7       #608EC4
-color15      #608EC4
-
-
-#608EC4
+color0       #E0E0DF
+color8       #A0A09F
+color1       #0d0d0d
+color9       #0d0d0d
+color2       #0d0d0d
+color10      #0d0d0d
+color3       #0d0d0d
+color11      #0d0d0d
+color4       #0d0d0d
+color12      #0d0d0d
+color5       #0d0d0d
+color13      #0d0d0d
+color6       #0d0d0d
+color14      #0d0d0d
+color7       #0d0d0d
+color15      #0d0d0d
