--- a/.config/kitty/themes/Mugetsu.conf
+++ b/.config/kitty/themes/Mugetsu.conf
@@ -4,6 +4,8 @@ cursor             #90908F
 
 active_border_color #0d0d0d
 
+selection_foreground #c2c2c2
+
 color0       #E0E0DF
 color8       #A0A09F
 color1       #0d0d0d
