update rofi themes

--- a/.config/kitty/current-theme.conf
+++ b/.config/kitty/current-theme.conf
@@ -1,22 +1,21 @@
-foreground         #0d0d0d
-background         #c2c2c2
-cursor             #90908F
+foreground         #c1c1c3
+background         #0a0910
 
-active_border_color #0d0d0d
+active_border_color #670e92
 
-color0       #E0E0DF
-color8       #A0A09F
-color1       #0d0d0d
-color9       #0d0d0d
-color2       #0d0d0d
-color10      #0d0d0d
-color3       #0d0d0d
-color11      #0d0d0d
-color4       #0d0d0d
-color12      #0d0d0d
-color5       #0d0d0d
-color13      #0d0d0d
-color6       #0d0d0d
-color14      #0d0d0d
-color7       #0d0d0d
-color15      #0d0d0d
+color0       #0a0910
+color8       #57576a
+color1       #534D5C
+color9       #534D5C
+color2       #670E92
+color10      #670E92
+color3       #74598E
+color11      #74598E
+color4       #910EAE
+color12      #910EAE
+color5       #AD13CA
+color13      #AD13CA
+color6       #D61BDD
+color14      #D61BDD
+color7       #c1c1c3
+color15      #c1c1c3
