--- a/.config/kitty/current-theme.conf
+++ b/.config/kitty/current-theme.conf
@@ -1,21 +1,30 @@
-foreground         #c1c1c3
-background         #0a0910
+foreground         #c4c3c6
+background         #160f1b
+background_opacity 1.0
+cursor             #c4c3c6
 
-active_border_color #670e92
+active_tab_foreground     #160f1b
+active_tab_background     #c4c3c6
+inactive_tab_foreground   #c4c3c6
+inactive_tab_background   #160f1b
 
-color0       #0a0910
-color8       #57576a
-color1       #534D5C
-color9       #534D5C
-color2       #670E92
-color10      #670E92
-color3       #74598E
-color11      #74598E
-color4       #910EAE
-color12      #910EAE
-color5       #AD13CA
-color13      #AD13CA
-color6       #D61BDD
-color14      #D61BDD
-color7       #c1c1c3
-color15      #c1c1c3
+active_border_color   #33509F
+inactive_border_color #160f1b
+bell_border_color     #614E67
+
+color0       #160f1b
+color8       #675c70
+color1       #9E3357
+color9       #9E3357
+color2       #5D9B7F
+color10      #5D9B7F
+color3       #33509F
+color11      #33509F
+color4       #F3D9A1
+color12      #F3D9A1
+color5       #BF3A9A
+color13      #BF3A9A
+color6       #916097
+color14      #916097
+color7       #6E5D8E
+color15      #6E5D8E
