change pain theme

--- a/.config/hypr/themes/pain.conf
+++ b/.config/hypr/themes/pain.conf
@@ -5,7 +5,7 @@ general {
     gaps_out = 15
     border_size = 5
     #col.active_border = rgb(6f00ff) rgb(9370db) 45deg #these are hex values
-    col.active_border = rgb(9e3357) rgb(5d9b7f) rgb(33509f) rgb(f3d9a1) rgb(bf3a9a) rgb(916097) rgb(6e5d8e) # hex in parentheses
+    col.active_border = rgb(9e3357) rgb(5d9b7f) rgb(33509f) rgb(f3d9a1) rgb(bf3a9a) rgb(916097) rgb(6e5d8e) 45deg # hex in parentheses
     col.inactive_border = rgba(595959aa)
 
     layout = master
