move theme switcher scripts into folder

--- a/.config/hypr/config/autostarts.conf
+++ b/.config/hypr/config/autostarts.conf
@@ -6,5 +6,6 @@
  exec-once = dunst
  exec-once = waybar
  exec-once = swww-daemon # start wallpaper daemon
- exec-once = ~/.config/hypr/scripts/set_wallpaper.sh # set wallpapers
+ exec-once = swww restore
+ #exec-once = ~/.config/hypr/scripts/set_wallpaper.sh # set wallpapers
 # exec-once = nwg-dock-hyprland -mb 5 -i 26 -d -hd 0 # open dock
