change env variables

--- a/.config/hypr/config/keybinds.conf
+++ b/.config/hypr/config/keybinds.conf
@@ -62,7 +62,7 @@ bindm = $mainMod, mouse:273, resizewindow
 
 # screenshot with hyprshot
 bind = $mainMod SHIFT, s, exec, hyprshot -m region --clipboard-only
-bind = $mainMod SHIFT, m, exec, hyprshot -m region # saves to pictures, not copied to clipboard
+bind = $mainMod SHIFT, m, exec, hyprshot -m output --clipboard-only # screenshot monitor, not copied to clipboard
 
 # make window fullscreen
 bind = $mainMod SHIFT, f, fullscreen
