--- a/.config/hypr/config/env_variables.conf
+++ b/.config/hypr/config/env_variables.conf
@@ -4,4 +4,4 @@ env = HYPRCURSOR_SIZE,24
 env = XCURSOR_THEME,Capitaine Cursors
 env = XCURSOR_SIZE,24
 
-env = HYPRSHOT_DIR,~/Pictures
+env = HYPRSHOT_DIR,~/Pictures/
