change rofi gradient

--- a/.config/hypr/config/peripherals.conf
+++ b/.config/hypr/config/peripherals.conf
@@ -13,7 +13,7 @@ input {
     }
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-    accel_profile = flat
+    accel_profile = flat # disable mouse accel
 }
 
 # Example per-device config
