--- a/.config/hypr/config/animations.conf
+++ b/.config/hypr/config/animations.conf
@@ -1,13 +1,28 @@
 animations {
-    enabled = yes
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
-    animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
-    animation = specialWorkspace, 1, 5.5, myBezier, slidevert
-    # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
+    enabled = yes, please :)
+        bezier = wind, 0.05, 0.9, 0.1, 1.05
+        bezier = winIn, 0.1, 1.1, 0.1, 1.1
+        bezier = winOut, 0.3, -0.3, 0, 1
+        bezier = liner, 1, 1, 1, 1
+        bezier = overshot, 0.05, 0.9, 0.1, 1.05
+        bezier = smoothOut, 0.5, 0, 0.99, 0.99
+        bezier = smoothIn, 0.5, -0.5, 0.68, 1.5
+        bezier = easeOutQuint,0.23,1,0.32,1
+        bezier = easeInOutCubic,0.65,0.05,0.36,1 
+        bezier = linear,0,0,1,1
+        bezier = almostLinear,0.5,0.5,0.75,1.0
+        bezier = quick,0.15,0,0.1,1
+        animation = windows, 1, 6, wind, slide
+        animation = windowsIn, 1, 5, winIn, slide
+        animation = windowsOut, 1, 3, smoothOut, slide
+        animation = windowsMove, 1, 5, wind, slide
+        animation = border, 1, 1, liner
+        animation = borderangle, 1, 180, liner, loop 
+        animation = fade, 1, 3, smoothOut
+        animation = workspaces, 1, 5, overshot
+        animation = workspacesIn, 1, 5, winIn, slide
+        animation = workspacesOut, 1, 5, winOut, slide
+        animation = layers, 1, 3.81, easeOutQuint 
+        animation = layersIn, 1, 4, easeOutQuint, popin 50%
+        animation = layersOut, 1, 3, easeOutQuint, slide
 }
