add dictionary script

--- a/.config/hypr/config/keybinds.conf
+++ b/.config/hypr/config/keybinds.conf
@@ -66,3 +66,6 @@ bind = $mainMod SHIFT, m, exec, hyprshot -m output --clipboard-only # screenshot
 
 # make window fullscreen
 bind = $mainMod SHIFT, f, fullscreen
+
+# get definition from the highlighted word
+bind = $mainMod, D, exec, ~/.config/scripts/definition_lookup.sh
