add gruvbox dark theme

--- a/.config/hypr/config/windowrules.conf
+++ b/.config/hypr/config/windowrules.conf
@@ -11,3 +11,4 @@ windowrule = float, ^(conky)$
 windowrulev2 = stayfocused, title:^(Steam)$,class:^(Steam)$
 windowrulev2 = minsize 1 1, title:^(Steam)$,class:^(Steam)$
 windowrulev2 = move onscreen cursor, title:^(Steam)$, class:^(Steam)$
+windowrulev2 = noanim, class:^(steam)$
